Added language detection

--- a/src/main/resources/messages.yml
+++ b/src/main/resources/messages.yml
@@ -3,3 +3,4 @@ NotAPlayer: '&cYou dont seem to be a player'
 LanguageSet: '&cLanguage set to %s'
 UnknownArgument: '&cArgument is unknown'
 SetLanguage: '&cYour language is unknown, please set it using /language (language)'
+DetectedLanguage: '&cWe detected your language! It''s %s, please change it with /lang (language)'
