--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,1 +1,8 @@
+# Translator
+#
+# Welcome to Translator. Not sure what to do? Check out the plugin page or join my discord:
+#
+# https://www.spigotmc.org/resources/translator.59799/
+# https://discord.gg/zgKr2YM
+
 APIKey: enterhere
