--- a/src/main/resources/messages.yml
+++ b/src/main/resources/messages.yml
@@ -1,6 +1,6 @@
-UnknownLanguage: '&cUnknown langauge, known languages are: az, ml, sq, mt, am, mk, en, mi, ar, mr , hy,mhr, af, mn, eu, de, ba, ne, be, no, bn, pa, my, pap, bg, fa, bs, pl, cy, pt, hu, ro, vi, ru, ht, ceb, gl, st, nl, si, mrj, sk, el, sl, ka, sw, gu, su, da, tg, he, th, yi, tl, id, ta, ga, tt, it, te, is, tr, es ,udm,kk, uz, kn, uk, ca, ur, ky, fi, zh, fr, ko, hi, xh, hr, km, cs, lo, sv, la, gd, lv, et,lt, eo, lb, jv, mg, ja, ms;'
-NotAPlayer: '&cYou dont seem to be a player'
-LanguageSet: '&cLanguage set to %s'
-UnknownArgument: '&cArgument is unknown'
-SetLanguage: '&cYour language is unknown, please set it using /language (language)'
-DetectedLanguage: '&cWe detected your language! It''s %s, please change it with /lang (language)'
+UnknownLanguage: '&8&oTranslator: &7Unknown language! known languages are: az, ml, sq, mt, am, mk, en, mi, ar, mr , hy,mhr, af, mn, eu, de, ba, ne, be, no, bn, pa, my, pap, bg, fa, bs, pl, cy, pt, hu, ro, vi, ru, ht, ceb, gl, st, nl, si, mrj, sk, el, sl, ka, sw, gu, su, da, tg, he, th, yi, tl, id, ta, ga, tt, it, te, is, tr, es ,udm,kk, uz, kn, uk, ca, ur, ky, fi, zh, fr, ko, hi, xh, hr, km, cs, lo, sv, la, gd, lv, et,lt, eo, lb, jv, mg, ja, ms;'
+NotAPlayer: '&8&oTranslator: &7You must be a player in order to execute this command.'
+LanguageSet: '&8&oTranslator: &7Language set to &8&o%s&7!'
+UnknownArgument: '&8&oTranslator: &7Argument is unknown'
+SetLanguage: '&8&oTranslator: &7Your language is unknown, please set it using /language (language)'
+DetectedLanguage: '&8&oTranslator: &7We detected your language! It''s %s, please change it with /lang (language) if it isn''t correct!'
