Added disable and enable + fixed bug + added update checker

--- a/src/main/resources/messages.yml
+++ b/src/main/resources/messages.yml
@@ -4,3 +4,8 @@ LanguageSet: '&8&oTranslator: &7Language set to &8&o%s&7!'
 UnknownArgument: '&8&oTranslator: &7Argument is unknown'
 SetLanguage: '&8&oTranslator: &7Your language is unknown, please set it using /language (language)'
 DetectedLanguage: '&8&oTranslator: &7We detected your language! It''s %s, please change it with /lang (language) if it isn''t correct!'
+TurnedOff: '&8&oTranslator: &7Disabled the translation off the messages!'
+TurnedOn: '&8&oTranslator: &7Enabled the translation off the messages!'
+CheckingUpdate: '&8&oTranslator: &7Checking for update...'
+UpdateFound: '&8&oTranslator: &7New version found! You are currently running version %oldversion%, version %newversion% is ready to be downloaded on %url%'
+UpdateNotFound: '&8&oTranslator: &7You are up to date!'
