--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,8 +1,9 @@
 name: Translator
 main: me.kyllian.translator.TranslatorPlugin
-version: 0.083
+version: 0.1
 description: Translator plugin
 depend: [ProtocolLib]
+api-version: 1.15
 
 commands:
   language:
